changes password and user list add use list change password icon

--- a/backend/css/bootstrap.css
+++ b/backend/css/bootstrap.css
@@ -8730,205 +8730,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #2e96ef; }
+  background: #98ee6b; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #14263d; }
+  background: #3badea; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #b8816f; }
+  background: #14a3ba; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #c9bfea; }
+  background: #fc9f54; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #5d3ba7; }
+  background: #afaaa7; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #1bd4c0; }
+  background: #3a07c6; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #035cce; }
+  background: #b0e023; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #df9566; }
+  background: #a2d227; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #84b54a; }
+  background: #913f22; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #5f6b96; }
+  background: #c3663e; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #dcc095; }
+  background: #6ea734; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #f85206; }
+  background: #5560fb; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #311247; }
+  background: #87e889; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #b68d0e; }
+  background: #19181e; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #d16424; }
+  background: #355c92; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #231553; }
+  background: #6ec35d; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #737b40; }
+  background: #18d4a1; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #8c72ce; }
+  background: #eefcd5; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #a39b6c; }
+  background: #492423; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #9de675; }
+  background: #7c96d9; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #654daf; }
+  background: #37ec67; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #1f8e22; }
+  background: #20cd18; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #6d6bdf; }
+  background: #4834c3; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #d2964f; }
+  background: #f05f39; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #b8e13f; }
+  background: #dd8033; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #43f167; }
+  background: #9aa2d1; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #2497f2; }
+  background: #e15273; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #7350f1; }
+  background: #2b26b0; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #62dc1e; }
+  background: #297f40; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #297e80; }
+  background: #1bd4aa; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #15d256; }
+  background: #48be6d; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #346a58; }
+  background: #976119; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #c70d9e; }
+  background: #6990da; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #37da69; }
+  background: #1270b0; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #b4e392; }
+  background: #6d5403; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #9ec882; }
+  background: #2af951; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #d6f6ad; }
+  background: #51ce3c; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #e527f4; }
+  background: #5f4083; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #a38bd3; }
+  background: #bc2ef2; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #adc902; }
+  background: #11486d; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #03a6d7; }
+  background: #bc54c4; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #861259; }
+  background: #cc3677; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #2f3a92; }
+  background: #cffe39; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #f253b4; }
+  background: #7820f5; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #2dc1b1; }
+  background: #c239a5; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #6c386d; }
+  background: #27723d; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #b898c7; }
+  background: #6c957b; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #2c9a89; }
+  background: #310fa5; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #22fc1e; }
+  background: #aab3c3; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #70b21f; }
+  background: #eedbb0; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #884749; }
+  background: #8d2244; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #48c36b; }
+  background: #bf0343; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #f9db6b; }
+  background: #f746a0; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #ee6058; }
+  background: #0b7b5c; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #8b77b7; }
+  background: #13d3e4; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #2f1238; }
+  background: #896bd1; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #ab043f; }
+  background: #96dcfd; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #164bd0; }
+  background: #52b8c2; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #a06a92; }
+  background: #8e6a5c; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #b25bd3; }
+  background: #82331d; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #6704ef; }
+  background: #73babd; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #23696e; }
+  background: #766f5b; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #1d5eaa; }
+  background: #8ab130; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #ef09da; }
+  background: #b03598; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #c2227d; }
+  background: #1b39d1; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #fee748; }
+  background: #7065de; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #8bc3a4; }
+  background: #78f62f; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #c117c8; }
+  background: #34dec4; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #c2db94; }
+  background: #4bd072; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #5e3c41; }
+  background: #272fbb; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #f035e6; }
+  background: #deff8f; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #3c8f9c; }
+  background: #12d1a6; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #fbc220; }
+  background: #61cfbb; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #2845f1; }
+  background: #d54366; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #413c2b; }
+  background: #b26bf8; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #40940c; }
+  background: #da8d6a; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #fd7a6c; }
+  background: #d408b1; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #4a656b; }
+  background: #f97965; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #fa5ae1; }
+  background: #557c4b; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #d447ae; }
+  background: #86e71f; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #eb2d9e; }
+  background: #58c726; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #cd99a6; }
+  background: #b33f1c; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #4412ae; }
+  background: #3c3980; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #543d27; }
+  background: #de74cb; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #20461b; }
+  background: #2303a3; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #91488e; }
+  background: #c808fe; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #5235e2; }
+  background: #255805; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #16033c; }
+  background: #4b1aa1; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #83ea69; }
+  background: #768469; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #e9464c; }
+  background: #b1d977; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #f9efdb; }
+  background: #2cd489; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #871292; }
+  background: #e7d858; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #1e7350; }
+  background: #c95fc0; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #3cb333; }
+  background: #2c8b65; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #751236; }
+  background: #b151c4; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #6504d0; }
+  background: #b7c6df; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #82041a; }
+  background: #a1d0af; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #0c6948; }
+  background: #9d8d25; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #cf5339; }
+  background: #9fba20; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #b6a5c9; }
+  background: #2c42dc; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -9337,7 +9337,7 @@ th {
 .theme-btn {
   padding: 10px 22px;
   font-size: 16px;
-  background: #a57dff;
+  background: #776FFF;
   border: 0px;
   color: white; }
   .theme-btn:hover {
@@ -10425,10 +10425,7 @@ button {
 button {
   -webkit-appearance: none;
   -moz-appearance: none;
-  appearance: none;
-  -webkit-box-shadow: 0px 0px 12px 0px rgba(0, 0, 0, 0.2);
-  -moz-box-shadow: 0px 0px 12px 0px rgba(0, 0, 0, 0.2);
-  box-shadow: 0px 0px 12px 0px rgba(0, 0, 0, 0.2); }
+  appearance: none; }
 
 .table-pagination {
   background: none;
@@ -10448,12 +10445,9 @@ a {
     color: #776FFF; }
 
 .graydient-secondary-btn {
-  background-image: linear-gradient(to right bottom, #5e5e5e, #565656, #4f4e4f, #484747, #413f3f); }
+  background: #413f3f; }
   .graydient-secondary-btn:hover {
-    background-image: linear-gradient(to right bottom, #6d6d6d, #5a5a5a, #616061, #484848, #5d5d5d); }
-
-.graydient-primary-btn {
-  background-image: linear-gradient(to right bottom, #a57dff, #9b79ff, #9076ff, #8472ff, #776fff); }
+    background: #5e5e5e; }
 
 .cancel-btn {
   background: transparent;
@@ -11520,6 +11514,9 @@ input:checked + .sliders:before {
   height: 10px;
   margin-left: 6px; }
 
+.orange-c {
+  background: #FF8A5B !important; }
+
 .table-icon {
   font-size: 20px;
   display: flex;
@@ -11584,7 +11581,7 @@ input:checked + .sliders:before {
 
 .modal-add-connections-wrapper .adding-adapter-modal-header {
   border-bottom: 1px solid #dcdde1;
-  padding: 12px 20px; }
+  padding: 12px 25px; }
 
 .modal-add-connections-wrapper .modal-close-btn {
   position: inherit;
@@ -12869,6 +12866,31 @@ table .parent-row,
 
 .col-icons div {
   padding: 0px 4px !important; }
+
+.max-small-width-modal {
+  max-width: 452px !important; }
+
+.new-search-bar-wrapper {
+  display: flex;
+  flex-direction: row !important;
+  margin-top: 10px; }
+  .new-search-bar-wrapper .search-right-bar {
+    width: 250px;
+    position: relative; }
+    .new-search-bar-wrapper .search-right-bar select {
+      -webkit-appearance: none !important;
+      -moz-appearance: none !important;
+      appearance: none !important;
+      background-image: url(../images/select-dropdwon-icon.png);
+      background-repeat: no-repeat;
+      background-position-x: 94%;
+      background-position-y: 18px;
+      padding: 10px;
+      height: 40px;
+      margin-right: 15px;
+      color: #000;
+      width: 100%;
+      border: 0px solid #000; }
 
 @media screen and (max-width: 767px) {
   .profile-box {
