--- a/backend/scss/_fahad.scss
+++ b/backend/scss/_fahad.scss
@@ -675,6 +675,10 @@ input:checked+.sliders:before {
   margin-left: 6px;
 }
 
+.orange-c {
+  background: #FF8A5B !important;
+}
+
 .table-icon {
   font-size: 20px;
   display: flex;
@@ -760,7 +764,7 @@ input:checked+.sliders:before {
 
 .modal-add-connections-wrapper .adding-adapter-modal-header {
   border-bottom: 1px solid #dcdde1;
-  padding: 12px 20px;
+  padding: 12px 25px;
 }
 
 .modal-add-connections-wrapper .modal-close-btn {
@@ -2558,4 +2562,36 @@ table .parent-row,
 
 .col-icons div {
   padding: 0px 4px !important;
+}
+
+.max-small-width-modal {
+  max-width: 452px !important;
+}
+
+.new-search-bar-wrapper {
+  display: flex;
+  flex-direction: row !important;
+  margin-top: 10px;
+
+  .search-right-bar {
+    width: 250px;
+    position: relative;
+
+    select {
+      -webkit-appearance: none !important;
+      -moz-appearance: none !important;
+      appearance: none !important;
+      background-image: url(../images/select-dropdwon-icon.png);
+      background-repeat: no-repeat;
+      background-position-x: 94%;
+      background-position-y: 18px;
+      padding: 10px;
+      height: 40px;
+      margin-right: 15px;
+      color: #000;
+      width: 100%;
+      border: 0px solid #000;
+    }
+  }
+
 }
