customize view page html

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8730,205 +8730,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #98ee6b; }
+  background: #5d5d62; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #3badea; }
+  background: #769f87; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #14a3ba; }
+  background: #4191b8; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #fc9f54; }
+  background: #31eae3; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #afaaa7; }
+  background: #cb7870; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #3a07c6; }
+  background: #7c133c; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #b0e023; }
+  background: #33152e; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #a2d227; }
+  background: #1223ac; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #913f22; }
+  background: #0b2ba4; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #c3663e; }
+  background: #a27541; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #6ea734; }
+  background: #f96ff4; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #5560fb; }
+  background: #7a5364; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #87e889; }
+  background: #915ca0; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #19181e; }
+  background: #13bd16; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #355c92; }
+  background: #8db7bb; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #6ec35d; }
+  background: #74b1df; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #18d4a1; }
+  background: #bff60d; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #eefcd5; }
+  background: #fe23f5; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #492423; }
+  background: #43ee8b; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #7c96d9; }
+  background: #df896d; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #37ec67; }
+  background: #9750dd; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #20cd18; }
+  background: #f02d3a; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #4834c3; }
+  background: #b2dac8; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #f05f39; }
+  background: #f42080; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #dd8033; }
+  background: #7bbc1b; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #9aa2d1; }
+  background: #655394; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #e15273; }
+  background: #cf9259; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #2b26b0; }
+  background: #95abf8; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #297f40; }
+  background: #e623c9; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #1bd4aa; }
+  background: #2e017c; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #48be6d; }
+  background: #76fd4e; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #976119; }
+  background: #fe9171; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #6990da; }
+  background: #0b6afa; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #1270b0; }
+  background: #3630b7; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #6d5403; }
+  background: #be5cf5; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #2af951; }
+  background: #fc75d8; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #51ce3c; }
+  background: #f54f0f; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #5f4083; }
+  background: #ee362a; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #bc2ef2; }
+  background: #486165; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #11486d; }
+  background: #0ba8af; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #bc54c4; }
+  background: #c2f189; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #cc3677; }
+  background: #d7b270; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #cffe39; }
+  background: #73e790; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #7820f5; }
+  background: #dc1132; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #c239a5; }
+  background: #7f88d2; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #27723d; }
+  background: #55d89b; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #6c957b; }
+  background: #579447; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #310fa5; }
+  background: #f32d27; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #aab3c3; }
+  background: #cbaf40; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #eedbb0; }
+  background: #1c415c; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #8d2244; }
+  background: #c08fe1; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #bf0343; }
+  background: #5a664a; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #f746a0; }
+  background: #17a26e; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #0b7b5c; }
+  background: #e5de33; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #13d3e4; }
+  background: #bcace9; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #896bd1; }
+  background: #aa7b43; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #96dcfd; }
+  background: #f4d3d7; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #52b8c2; }
+  background: #da78de; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #8e6a5c; }
+  background: #3aa856; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #82331d; }
+  background: #f2b2e8; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #73babd; }
+  background: #e82da1; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #766f5b; }
+  background: #7b6817; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #8ab130; }
+  background: #31c6ab; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #b03598; }
+  background: #d961d4; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #1b39d1; }
+  background: #7dfec3; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #7065de; }
+  background: #4fd8e4; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #78f62f; }
+  background: #61d3ae; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #34dec4; }
+  background: #9ee78c; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #4bd072; }
+  background: #1055ac; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #272fbb; }
+  background: #c358e4; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #deff8f; }
+  background: #bb0965; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #12d1a6; }
+  background: #20df9a; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #61cfbb; }
+  background: #c773a3; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #d54366; }
+  background: #436484; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #b26bf8; }
+  background: #a9a732; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #da8d6a; }
+  background: #09203c; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #d408b1; }
+  background: #b8cda5; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #f97965; }
+  background: #bc8520; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #557c4b; }
+  background: #a41d09; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #86e71f; }
+  background: #865f73; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #58c726; }
+  background: #1390b3; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #b33f1c; }
+  background: #69414c; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #3c3980; }
+  background: #94a8d4; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #de74cb; }
+  background: #825c2d; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #2303a3; }
+  background: #fe862d; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #c808fe; }
+  background: #bbc39c; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #255805; }
+  background: #f157b9; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #4b1aa1; }
+  background: #5ff507; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #768469; }
+  background: #3977c8; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #b1d977; }
+  background: #211daf; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #2cd489; }
+  background: #3f9830; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #e7d858; }
+  background: #1dc825; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #c95fc0; }
+  background: #e01fd4; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #2c8b65; }
+  background: #190b50; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #b151c4; }
+  background: #6b9b81; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #b7c6df; }
+  background: #109c99; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #a1d0af; }
+  background: #639b21; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #9d8d25; }
+  background: #9ac9aa; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #9fba20; }
+  background: #8fb397; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #2c42dc; }
+  background: #b58d4a; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -12892,6 +12892,146 @@ table .parent-row,
       width: 100%;
       border: 0px solid #000; }
 
+.list-view-hover-wrapper {
+  background: #fff;
+  padding: 35px 35px 35px 44px;
+  border: 1px solid #C4C4C4; }
+  .list-view-hover-wrapper .content-wrapper {
+    display: flex;
+    justify-content: space-between;
+    align-items: center; }
+    .list-view-hover-wrapper .content-wrapper .dropdowns-wrapper {
+      border: 1px solid #C4C4C4;
+      padding: 20px;
+      width: 100%;
+      margin-right: 50px; }
+      .list-view-hover-wrapper .content-wrapper .dropdowns-wrapper .dropdown-main-div {
+        display: flex;
+        justify-content: space-between;
+        align-items: center; }
+      .list-view-hover-wrapper .content-wrapper .dropdowns-wrapper .box-btn {
+        display: flex;
+        justify-content: end; }
+    .list-view-hover-wrapper .content-wrapper .view-boxs-wrapper {
+      width: 100%; }
+      .list-view-hover-wrapper .content-wrapper .view-boxs-wrapper .view-box {
+        border: 1px solid #C4C4C4;
+        padding: 20px; }
+        .list-view-hover-wrapper .content-wrapper .view-boxs-wrapper .view-box h3 {
+          font-weight: bold;
+          margin-bottom: 22px; }
+        .list-view-hover-wrapper .content-wrapper .view-boxs-wrapper .view-box .box-btn {
+          display: flex;
+          justify-content: end; }
+
+.dropdown-div {
+  max-height: 358px; }
+
+.dropdwon-top {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border: 1px solid #CDCDD6;
+  padding: 15px 12px;
+  min-width: 302px;
+  width: 100%; }
+
+.dropdwon-contents-top {
+  border: 1px solid #CDCDD6;
+  border-top: 0px solid #CDCDD6;
+  padding: 15px; }
+  .dropdwon-contents-top .filter-items-div input {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #CDCDD6; }
+
+.dropdwon-contents-bottom {
+  border: 1px solid #CDCDD6;
+  border-top: 0px solid #CDCDD6;
+  padding: 15px;
+  position: relative;
+  overflow: hidden; }
+
+.dropdown-connectors-list {
+  margin-top: 10px;
+  overflow: auto;
+  height: 260px;
+  position: relative; }
+  .dropdown-connectors-list li {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    margin-bottom: 10px; }
+    .dropdown-connectors-list li div {
+      margin-right: 10px; }
+    .dropdown-connectors-list li .dropdwon-connector-img {
+      width: 20px;
+      height: 20px; }
+
+.scroll-div-height {
+  height: 190px;
+  position: relative; }
+
+/* Customize the label (the container) */
+.container {
+  display: block;
+  position: relative;
+  padding-left: 25px;
+  margin-bottom: 27px;
+  cursor: pointer;
+  font-size: 14px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none; }
+
+/* Hide the browser's default radio button */
+.container input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+  height: 0;
+  width: 0; }
+
+/* Create a custom radio button */
+.checkmark {
+  position: absolute;
+  top: -2px;
+  left: 0;
+  height: 18px;
+  width: 18px;
+  background-color: #fff;
+  border: 1px solid #A9B1B9;
+  border-radius: 50%; }
+
+/* On mouse-over, add a grey background color */
+.container:hover input ~ .checkmark {
+  background-color: #fff;
+  border: 1px solid #A9B1B9; }
+
+/* When the radio button is checked, add a blue background */
+.container input:checked ~ .checkmark {
+  background-color: #2196F3; }
+
+/* Create the indicator (the dot/circle - hidden when not checked) */
+.checkmark:after {
+  content: "";
+  position: absolute;
+  display: none; }
+
+/* Show the indicator (dot/circle) when checked */
+.container input:checked ~ .checkmark:after {
+  display: block; }
+
+/* Style the indicator (dot/circle) */
+.container .checkmark:after {
+  top: 9px;
+  left: 9px;
+  width: 8px;
+  height: 8px;
+  border-radius: 50%;
+  background: white; }
+
 @media screen and (max-width: 767px) {
   .profile-box {
     padding: 10px; }
@@ -13158,7 +13298,25 @@ table .parent-row,
     padding-top: 5px !important; }
 
   .role-to-txt h2 {
-    padding-left: 0px; } }
+    padding-left: 0px; }
+
+  .list-view-hover-wrapper {
+    padding: 15px; }
+    .list-view-hover-wrapper .content-wrapper {
+      flex-direction: column; }
+      .list-view-hover-wrapper .content-wrapper .dropdowns-wrapper {
+        margin-right: 0px; }
+        .list-view-hover-wrapper .content-wrapper .dropdowns-wrapper .dropdown-main-div {
+          flex-direction: column; }
+          .list-view-hover-wrapper .content-wrapper .dropdowns-wrapper .dropdown-main-div .dropdown-div {
+            width: 100% !important; }
+          .list-view-hover-wrapper .content-wrapper .dropdowns-wrapper .dropdown-main-div .mr-4 {
+            margin-right: 0rem !important;
+            margin-bottom: 25px; }
+
+  .view-boxs-wrapper {
+    width: 100%;
+    margin-top: 20px; } }
 /*767 screen end here*/
 /*768 to 1023 screen css*/
 @media only screen and (min-width: 768px) and (max-width: 1023px) {
