--- a/scss/_fahad.scss
+++ b/scss/_fahad.scss
@@ -2595,3 +2595,186 @@ table .parent-row,
   }
 
 }
+
+.list-view-hover-wrapper {
+  background: #fff;
+  padding: 35px 35px 35px 44px;
+  border: 1px solid #C4C4C4;
+
+  .content-wrapper {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    .dropdowns-wrapper {
+      border: 1px solid #C4C4C4;
+      padding: 20px;
+      width: 100%;
+      margin-right: 50px;
+
+      .dropdown-main-div {
+
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+      }
+
+      .box-btn {
+        display: flex;
+        justify-content: end;
+      }
+    }
+
+    .view-boxs-wrapper {
+      width: 100%;
+
+      .view-box {
+        border: 1px solid #C4C4C4;
+        padding: 20px;
+
+        h3 {
+          font-weight: bold;
+          margin-bottom: 22px;
+        }
+
+        .box-btn {
+          display: flex;
+          justify-content: end;
+        }
+      }
+    }
+  }
+}
+
+.dropdown-div {
+  max-height: 358px;
+}
+
+.dropdwon-top {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border: 1px solid #CDCDD6;
+
+  padding: 15px 12px;
+  min-width: 302px;
+  width: 100%;
+}
+
+.dropdwon-contents-top {
+  border: 1px solid #CDCDD6;
+  border-top: 0px solid #CDCDD6;
+  padding: 15px;
+
+  .filter-items-div {
+    input {
+      width: 100%;
+      padding: 10px;
+      border: 1px solid #CDCDD6;
+    }
+  }
+}
+
+.dropdwon-contents-bottom {
+  border: 1px solid #CDCDD6;
+  border-top: 0px solid #CDCDD6;
+  padding: 15px;
+  position: relative;
+  overflow: hidden;
+}
+
+.dropdown-connectors-list {
+  margin-top: 10px;
+  overflow: auto;
+  height: 260px;
+  position: relative;
+
+  li {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    margin-bottom: 10px;
+
+    div {
+      margin-right: 10px;
+    }
+
+    .dropdwon-connector-img {
+      width: 20px;
+      height: 20px;
+    }
+  }
+}
+
+.scroll-div-height {
+  height: 190px;
+  position: relative;
+}
+
+/* Customize the label (the container) */
+.container {
+  display: block;
+  position: relative;
+  padding-left: 25px;
+  margin-bottom: 27px;
+  cursor: pointer;
+  font-size: 14px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+/* Hide the browser's default radio button */
+.container input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+  height: 0;
+  width: 0;
+}
+
+/* Create a custom radio button */
+.checkmark {
+  position: absolute;
+  top: -2px;
+  left: 0;
+  height: 18px;
+  width: 18px;
+  background-color: #fff;
+  border: 1px solid #A9B1B9;
+  border-radius: 50%;
+}
+
+/* On mouse-over, add a grey background color */
+.container:hover input~.checkmark {
+  background-color: #fff;
+  border: 1px solid #A9B1B9;
+}
+
+/* When the radio button is checked, add a blue background */
+.container input:checked~.checkmark {
+  background-color: #2196F3;
+}
+
+/* Create the indicator (the dot/circle - hidden when not checked) */
+.checkmark:after {
+  content: "";
+  position: absolute;
+  display: none;
+}
+
+/* Show the indicator (dot/circle) when checked */
+.container input:checked~.checkmark:after {
+  display: block;
+}
+
+/* Style the indicator (dot/circle) */
+.container .checkmark:after {
+  top: 9px;
+  left: 9px;
+  width: 8px;
+  height: 8px;
+  border-radius: 50%;
+  background: white;
+}
